Resume web link updated.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <h2>Resume</h2>
                 <div id="resume-grid">
                     <div id="resume-box">
-                        <a href="https://rafaelbc34.github.io/Html-Css_Resume_CV_RBC/" class="resume-btn" target="_blank">Web version</a>
+                        <a href="https://rafaelbc-dev.github.io/rbc-resume-cv/" class="resume-btn" target="_blank">Web version</a>
                     </div>
                     <div id="resume-box">
                         <a href="" class="resume-btn">PDF version</a>
