--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                   </div>
                                   <div class="flip-box-back">
                                     <h2>Watch it here</h2>
-                                    <a href="https://nodejs-mysql-restapi-production-a396.up.railway.app/api/employees" target="_blank">Open site</a>
+                                    <a href="https://nodejs-mysql-emp-rest-api.herokuapp.com/api/employees" target="_blank">Open site</a>
                                   </div>
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                                   </div>
                                   <div class="flip-box-back">
                                     <h2>Watch it here</h2>
-                                    <a href="https://rafaelbc34.github.io/Employees-MySQL-API_Web-Client/" target="_blank">Open site</a>
+                                    <a href="https://rafaelbc-dev.github.io/employees-MySQL-API_Web-Client/" target="_blank">Open site</a>
                                   </div>
                                 </div>
                             </div>
