--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                   </div>
                                   <div class="flip-box-back">
                                     <h2>Watch it here</h2>
-                                    <a href="https://nodejs-first-web-app.herokuapp.com/" target="_blank">Open site</a>
+                                    <a href="https://nodejs-first-web-app.onrender.com/" target="_blank">Open site</a>
                                   </div>
                                 </div>
                             </div>
