Links and its descriptions updated.

--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
                             <div class="flip-box">
                                 <div class="flip-box-inner">
                                   <div class="flip-box-front">
-                                    <h2>NodeJs MySQL REST API</h2>
-                                    <p>Employees Web API built with NodeJs and MySQL</p>
+                                    <h2>NodeJs employees REST API</h2>
+                                    <p>Employees REST API built with NodeJs</p>
                                   </div>
                                   <div class="flip-box-back">
                                     <h2>Watch it here</h2>
-                                    <a href="https://nodejs-mysql-emp-rest-api.herokuapp.com/api/employees" target="_blank">Open site</a>
+                                    <a href="https://nodejs-emp-rest-api.onrender.com/api/employees" target="_blank">Open site</a>
                                   </div>
                                 </div>
                             </div>
@@ -184,12 +184,12 @@
                             <div class="flip-box">
                                 <div class="flip-box-inner">
                                   <div class="flip-box-front">
-                                    <h2>Web Client for NodeJs MySQL REST API</h2>
-                                    <p>Uses JavaScript Axios to perform requests to a NodeJs MySQL REST API</p>
+                                    <h2>Web Client for NodeJs REST API</h2>
+                                    <p>Uses JavaScript Axios-HTTP to perform requests to NodeJs REST API</p>
                                   </div>
                                   <div class="flip-box-back">
                                     <h2>Watch it here</h2>
-                                    <a href="https://rafaelbc-dev.github.io/employees-MySQL-API_Web-Client/" target="_blank">Open site</a>
+                                    <a href="https://rafaelbc-dev.github.io/employees-api_web-client/" target="_blank">Open site</a>
                                   </div>
                                 </div>
                             </div>
