Pdf version resume added.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <a href="https://rafaelbc-dev.github.io/rbc-resume-cv/" class="resume-btn" target="_blank">Web version</a>
                     </div>
                     <div id="resume-box">
-                        <a href="" class="resume-btn">PDF version</a>
+                        <a href="assets/Resume_CV_RafaelBC-2023.pdf" target="_blank" class="resume-btn">PDF version</a>
                     </div>
                 </div>
             </div>
