--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
                 <div id="about-desc">
                     <h3>About me:</h3>
                     <h4>
-                        Started programming by my own and began studies in IOC on multi platform development. Right after graduation, having done some practice as trainee, continued with studies on web development.
+                        Started programming by my own after taking some courses related to IT, office suites, databases, IoT and others.
                         <br>
-                        Currently improving my skills while searching for opportunities to increase my knowledge and expertise in programming.
+                        Then began studies in IOC on multi platform development and right after graduation, having done some practice as trainee, continued with studies on web development.
+                        <br>
+                        Currently improving my skills while searching for professional opportunities to increase my knowledge and expertise in programming.
                     </h4>
                     <p>Born and living in: <span id="about-location">Igualada, Barcelona - Spain</span></p>
                 </div>
